# torque

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG  DEVELOPMENT  INSTALL  Makefile.am  Makefile.in  README.NUMA  README.gssapi  README.torque  Release_Notes  acinclude.m4  confdefs.h  configure  configure.ac  index.html  params.json  torque.spec  torque.spec.in
buildutils/: Makefile.in  glite.m4  glite_lb.m4  pbs_mach_type  pbs_mkdirs.in  self-extract-head-sh.in  tac_tcltk.m4  tcl.m4  torque.spec.in
contrib/diag/: tdiag.sh
contrib/gssapi/: clientrenew  epilogue  init.pbsmom  init.pbsserver  install-example  prologue  serverrenew
contrib/init.d/: pbs_mom  pbs_sched  pbs_server  suse.pbs_mom
doc/: Makefile.am  Makefile.in
doc/ers/: Makefile.in
doc/man1/: Makefile.in  basl2c.1B  pbs_queue_attributes.7B  pbs_server_attributes.7B  pbsdsh.1B  qalter.1.in  qalter.1B  qdel.1.in  qdel.1B  qhold.1B  qmgr.1B  qrls.1.in  qrls.1B  qselect.1B  qsig.1B  qstat.1.in  qsub.1.in  qsub.1B  xpbs.1B  xpbsmon.1B
doc/man3/: Makefile.in  pbs_alterjob.3B  pbs_connect.3B  pbs_deljob.3B  pbs_disconnect.3B  pbs_geterrmsg.3B  pbs_holdjob.3B  pbs_locate.3B  pbs_manager.3B  pbs_movejob.3B  pbs_msgjob.3B  pbs_orderjob.3B  pbs_rerunjob.3B  pbs_rescquery.3B  pbs_rescreserve.3B  pbs_rlsjob.3B  pbs_runjob.3B  pbs_selectjob.3B  pbs_selstat.3B  pbs_sigjob.3B  pbs_stagein.3B  pbs_statjob.3B  pbs_statnode.3B  pbs_statque.3B  pbs_statserver.3B  pbs_submit.3B  pbs_terminate.3B
doc/man7/: Makefile.in  pbs_job_attributes.7.in  pbs_server_attributes.7.in  pbs_server_attributes.7B
doc/man8/: Makefile.in  pbs_mom.8.in  pbs_mom.8B  pbs_server.8B  pbsnodes.8B  qterm.8.in  qterm.8B
magrathea/: Doxyfile  Makefile  NEWS  TODO  cfg.c  cfg.h  configure  net.c  net.h  parse-config.sh  subst.sh  utils.c  utils.h  versions.sh
magrathea/CVS/: Entries  Repository
magrathea/config/: functions.sh  vserver-CTX_TYPE.c  vserver.c  xen.c
magrathea/debian/: changelog  control  files  rules
magrathea/doc/: admin.txt  admin.txt-contents  lifecycle2.eps
magrathea/kernel/: README  patch
magrathea/master/: Makefile  cpus.c  cpus.h  domains.c  domains.h  magrathea-admin.c  magrathea-master.c  paths.h  reporter.c  reporter.h  status.c  status.h  (+6 more)
meta/: check_scratch_usage  cluster_conf  cluster_delete  cluster_list  cluster_purge  cluster_status  cluster_submit  epilogue  lb_krb_ticket  magrathea_admin_lock  magrathea_admin_unlock  magrathea_lock  magrathea_unlock  mom_environ  pbs_get_cores  pbs_mom  pbs_server.start  pbs_server.stop  pbsnodes  prolog_magrathea_start  prologue  qfree  qstat  qsub_build  recalculate_leftover_scratch  recheck_gpu_allocations  recheck_leftover_scratch  report_scratch  sbf_start  sbf_stop  torque-gpu-mgr.sh  torque-scratch-mgr.sh  torque-sw-paths.sh  touch_scratch
src/: Makefile.am  Makefile.in
src/resmom/: Makefile.am  Makefile.in  catch_child.c  cgroup.cpp  cgroup.h  checkpoint.c  cloud.c  cloud.h  cray_cpa.c  job_func.c  mom_comm.c  mom_inter.c  mom_main.c  mom_resources.c  mom_resources.h  mom_server.c  mom_server.h  pbs_demux.c  prolog.c  renew.c  renew.h  req_quejob.c  requests.c  rm_dep.h  root_task.c  root_task.h  start_exec.c  tmsock_recov.c
src/resmom/aix4/: Makefile.in  mom_mach.c  mom_mach.h  mom_start.c
src/resmom/aix5/: Makefile.in  mom_mach.c  mom_mach.h  mom_start.c  pe_input.c
src/resmom/cpa/: Makefile.in
src/resmom/cygwin/: Makefile.am  Makefile.in  mom_start.c
src/resmom/darwin/: Makefile.in  mom_mach.c  mom_mach.h  mom_start.c  pe_input.c
src/resmom/digitalunix/: Makefile.in  mom_mach.c  mom_mach.h  mom_start.c  pe_input.c
src/resmom/freebsd/: Makefile.in  mom_mach.c  mom_mach.h  mom_start.c  pe_input.c
src/resmom/freebsd5/: Makefile.in  mom_mach.c  mom_mach.h  mom_start.c  pe_input.c
src/resmom/freebsd6/: Makefile  Makefile.in
src/resmom/freebsd6/.deps/: mom_mach.Po  mom_start.Po  pe_input.Po
src/resmom/fujitsu/: Makefile.in  mom_mach.c  mom_mach.h  mom_start.c  pe_input.c
src/resmom/hpux10/: Makefile.in  mom_mach.c  mom_mach.h  mom_start.c
src/resmom/hpux11/: Makefile.in  mom_mach.c  mom_mach.h  mom_start.c  pe_input.c
src/resmom/irix5/: Makefile.in  mom_mach.c  mom_mach.h  mom_start.c  pe_input.c
src/resmom/irix6/: Makefile.am  Makefile.in  mom_mach.c  mom_mach.h  mom_start.c
src/resmom/irix6array/: Makefile.am  Makefile.in  mom_mach.c  mom_mach.h  mom_start.c
src/resmom/linux/: Makefile.am  Makefile.in  cpuset.c  mom_mach.c  mom_mach.h  mom_start.c
src/resmom/linux/cpuset/: Makefile.in
src/resmom/netbsd/: Makefile.in  mom_mach.c  mom_mach.h  mom_start.c  pe_input.c
src/resmom/solaris5/: Makefile.in  mom_mach.c  mom_mach.h  mom_start.c  pe_input.c
src/resmom/solaris7/: Makefile.in  mom_mach.c  mom_mach.h  mom_start.c  pe_input.c
src/resmom/sunos4/: Makefile.in  mom_mach.c  mom_mach.h  mom_start.c  pe_input.c
src/resmom/unicos8/: Makefile.in  mom_mach.c  mom_mach.h  mom_start.c  pe_input.c
src/resmom/unicosmk2/: Makefile.am  Makefile.in  mom_mach.c  mom_mach.h  mom_start.c  pe_input.c  wait_job.c
src/scheduler.meta/: ConnectionMgr.cpp  ConnectionMgr.h  DynamicResource.cpp  DynamicResource.h  JobInfo.cpp  JobInfo.h  JobLog.cpp  JobLog.h  Makefile.am  NodeFilters.cpp  NodeFilters.h  NodeInfo.cpp  NodeInfo.h  NodeSort.cpp  NodeSort.h  NodeState.cpp  NodeState.h  RescInfoDb.cpp  RescInfoDb.h  SchedulerRealm.cpp  SchedulerRealm.h  ServerInfo.cpp  ServerInfo.h  check.cpp  check.h  config.h  constant.h  data_types.h  fairshare.cpp  fairshare.h  fifo.cpp  fifo.h  globals.cpp  globals.h  job_info.cpp  job_info.h  misc.cpp  misc.h  node_info.cpp  node_info.h  (+24 more)
src/scheduler.meta/base/: BaseFwd.h  ConnectionMgr.cpp  ConnectionMgr.h  DynamicResource.cpp  DynamicResource.h  MiscHelpers.cpp  MiscHelpers.h  NodeData.cpp  NodeData.h  NodeState.cpp  NodeState.h  PropRegistry.cpp  PropRegistry.h  Resource.cpp  Resource.h  ResourceSet.cpp  ResourceSet.h
src/scheduler.meta/logic/: FairshareTree.cpp  FairshareTree.h  JobAssign.cpp  JobAssign.h  LogicFwd.h  NodeFilters.cpp  NodeFilters.h  NodeLogic.cpp  NodeLogic.h
t/: 07_job_arrays.t
(+864 files in other folders)
